# gencon-event-enricher

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
docs/: index.html  styles.css
docs/app/: collections.js  conflict.js  data.js  filters.js  links.js  main.js  modals.js  saved.js  schedule.js  search.js  sort.js  view-detail.js  view-table.js  view-timeline.js
pipeline/: agent-input.json  agent_prompt.py  agent_response.py  agent_response_schema.json  build.py  claude_invoke.py  emit.py  group_key.py  grouping.py  mappings.agent.yaml  mappings.py  mappings.yaml  match_with_agent.py  matching.py  normalize.py  ollama_invoke.py  openai_compat_invoke.py  parse_bgg.py  parse_gencon.py  types.py
tests/: conftest.py  test_agent_prompt.py  test_agent_response.py  test_build_integration.py  test_collections_js.py  test_conflict_js.py  test_emit.py  test_filters_js.py  test_format_when_js.py  test_group_key.py  test_grouping.py  test_mappings.py  test_match_with_agent.py  test_matching.py  test_normalize.py  test_ollama_invoke.py  test_openai_compat_invoke.py  test_parse_bgg.py  test_parse_gencon.py  test_schedule_js.py  test_smoke_webpage.py  test_sort_js.py  test_view_timeline_js.py
tests/fixtures/: _make_tiny_gencon.py  tiny_bgg.csv  tiny_gencon.xlsx
